--- a/templates/todo.html
+++ b/templates/todo.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     
-    <h1> TODO APP</h1>
+    <h1 style="color: red;"> TODO APP</h1>
 
     <form action="/addtodo" method="post">
        <input type="text" name="task" placeholder="task">
